Thu May  1 22:19:34 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* file.c: Change AND condition to nested condition.

Thu May  1 00:36:26 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* file.c (FSTATFS): check availability of struct statfs and
	  struct statvfs in addition to fstatfs(2) and fstatvfs(2).
	  This fixes error in Solaris. [Bug #9788] [ruby-dev:48145]

Wed Apr 30 19:46:23 2014  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_after_sweep): suppress unnecessary expanding heap.
	  Tomb heap pages are freed pages here, so expanding heap is
	  not required.

Wed Apr 30 17:58:40 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (invoke_block_from_c): add VM_FRAME_FLAG_BMETHOD to record
	  it is bmethod frame.

	* vm.c (vm_exec): invoke RUBY_EVENT_RETURN event if rollbacked frame
	  is VM_FRAME_FLAG_BMETHOD.
	  [Bug #9759]

	* test/ruby/test_settracefunc.rb: add a test for TracePoint/set_trace_func.

	* vm_core.h: rename rb_thread_t::passed_me to
	  rb_thread_t::passed_bmethod_me to clarify the usage.

	* vm_insnhelper.c (vm_call_bmethod_body): use renamed member.

Wed Apr 30 17:06:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset): pin down dynamic symbol only. it is
	  possible that attrset ID can be registered as a static symbol
	  after the corresponding attrget ID has been registered as a
	  dynamic, and then the latter may be collected.
	  [ruby-core:62226] [Bug #9787]

Tue Apr 29 14:17:57 2014  Tanaka Akira  <akr@fsij.org>

	* lib/tmpdir.rb: Rescue LoadError on etc.so for miniruby.
	  Revert r45707, r45711, r45717.

Tue Apr 29 12:50:02 2014  Tanaka Akira  <akr@fsij.org>

	* lib/fileutils.rb: Don't need to define fu_get_gid and fu_get_gid in
	  rescue LoadError on 'etc'.

Tue Apr 29 10:21:38 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* parse.y (symbols_i): like r45492, call rb_gc_resurrect().

Tue Apr 29 04:29:05 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* file.c (HAVE_STRUCT_STATFS_T_F_FSTYPENAME): Add new macro for