@@ -1,3 +1,9 @@
+Fri May  2 10:37:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (rb_id_attrset): turn dynamically interned Symbol into
+	  an ID, since rb_str_dynamic_intern returns a Symbol but not an
+	  ID.  [ruby-core:62226] [Bug #9787]
+
 Thu May  1 22:19:34 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* file.c: Change AND condition to nested condition.
